# src/controllers/openRoutesController.ts
@@ -1,34 +1,34 @@
 import { Response, Request, NextFunction } from "express";
 import { Router } from "express";
-import crypto from "crypto";
 import { book_id_validator } from "../middlewares/paramsValidator";
 import { Search_query_Validator } from "../middlewares/queryValidator";
 import bookService from "../services/bookServices";
+import { randomString } from "../utils/cryptoRandom";
 import { logger } from "../utils/logger";
 
 export const OpenRoutes = Router();
 
-const reqId = crypto.randomBytes(3).toString("hex");
-
 OpenRoutes.get(
   "/books",
   async (req: Request, res: Response, next: NextFunction) => {
-    const loggerForSearchbooks = logger.child({ reqId }, true);
-    loggerForSearchbooks.info({ req: req }, reqId);
+    const loggerForgetBooks = logger.child(
+      { req_id: await randomString() },
+      true
+    );
+
+    loggerForgetBooks.info({ req: req });
     try {
-      const books = await bookService.getAllbooks(loggerForSearchbooks);
-      loggerForSearchbooks.info(
-        { req: req },
-        "books fetched successfully",
-        reqId
-      );
+      const books = await bookService.getAllbooks();
+
       res.status(200).json({
         status: "success",
         statusCode: 200,
         message: "books fetched successfully",
         data: books,
       });
+      loggerForgetBooks.info({ res: res });
     } catch (error) {
+      loggerForgetBooks.error({ err: error });
       next(error);
     }
   }
@@ -38,17 +38,23 @@ OpenRoutes.get(
   "/books/search",
   Search_query_Validator,
   async (req: Request, res: Response, next: NextFunction) => {
+    const loggerForSearchbooks = logger.child(
+      { req_id: await randomString() },
+      true
+    );
+    loggerForSearchbooks.info({ req: req });
     try {
-      const loggerForSearchbooks = logger.child({ reqId }, true);
       const query = req.query.query;
-      const books = await bookService.searchBook(query, loggerForSearchbooks);
+      const books = await bookService.searchBook(query);
       res.status(200).send({
         status: "success",
         statusCode: 200,
         message: "books fetched successfully",
         data: books,
       });
+      loggerForSearchbooks.info({ res: res });
     } catch (error) {
+      loggerForSearchbooks.error({ err: error });
       next(error);
     }
   }
@@ -58,21 +64,22 @@ OpenRoutes.get(
   "/books/:book_id",
   book_id_validator,
   async (req: Request, res: Response, next: NextFunction) => {
-    const loggerForSearchbooks = logger.child({ reqId }, true);
-    loggerForSearchbooks.info({ req: req }, reqId);
+    const loggerForbook_byid = logger.child(
+      { req_id: await randomString() },
+      true
+    );
+    loggerForbook_byid.info({ req: req });
     try {
-      const books = await bookService.getSingleBook(
-        req.params.book_id,
-        loggerForSearchbooks
-      );
+      const books = await bookService.getSingleBook(req.params.book_id);
       res.status(200).send({
         status: "success",
         statusCode: 200,
         message: "book fetched successfully",
         data: books,
       });
-      loggerForSearchbooks.info({ res: res }, reqId);
+      loggerForbook_byid.info({ res: res });
     } catch (error) {
+      loggerForbook_byid.error({ err: error });
       next(error);
     }
   }
